--- a/app/public/apidoc/api_project.json
+++ b/app/public/apidoc/api_project.json
@@ -1,15 +1,15 @@
 {
   "title": "国科官网api",
   "url": "http://10.10.10.31:7001",
+  "sampleUrl": "http://10.10.10.31:7001",
   "name": "guoke_back",
   "version": "1.0.0",
   "description": "",
-  "sampleUrl": false,
   "defaultVersion": "0.0.0",
   "apidoc": "0.3.0",
   "generator": {
     "name": "apidoc",
-    "time": "2018-05-03T16:38:00.589Z",
+    "time": "2018-05-04T07:53:10.958Z",
     "url": "http://apidocjs.com",
     "version": "0.17.6"
   }
