参数验证规则修改

--- a/app/public/apidoc/api_project.json
+++ b/app/public/apidoc/api_project.json
@@ -1,7 +1,7 @@
 {
   "title": "国科官网api",
   "url": "http://10.10.10.31:7001",
-  "sampleUrl": "http://localhost:7001",
+  "sampleUrl": "http://10.10.10.31:7001",
   "name": "guoke_back",
   "version": "1.0.0",
   "description": "",
@@ -9,7 +9,7 @@
   "apidoc": "0.3.0",
   "generator": {
     "name": "apidoc",
-    "time": "2018-05-06T17:22:28.677Z",
+    "time": "2018-05-07T08:29:58.229Z",
     "url": "http://apidocjs.com",
     "version": "0.17.6"
   }
